@@ -38,11 +38,13 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.2.Final</version>
         </dependency>
+
         <dependency> 
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.0.Final</version>
         </dependency>
+
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
@@ -71,6 +73,12 @@
 
         <dependency>
             <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>15-ea+2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
             <version>15-ea+2</version>
         </dependency>
@@ -80,6 +88,13 @@
             <artifactId>webview-deps</artifactId>
             <version>1.3.2</version>
             <type>pom</type>
+        </dependency>
+
+        <!-- Controlsfx https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.1</version>
         </dependency>
 
         <!-- MySQL Driver -->
@@ -108,6 +123,7 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -126,6 +142,33 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.56</version>
+        </dependency>
+
+        <!-- GMapsFX -->
+        <dependency>
+            <groupId>com.lynden</groupId>
+            <artifactId>GMapsFX</artifactId>
+            <version>2.12.0</version>
+            <exclusions>
+                <!-- Exclude svf4j found in logback-->
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- Google Maps API Client -->
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.4</version>
         </dependency>
 
     </dependencies>
@@ -148,6 +191,10 @@
                 <configuration>
                     <mainClass>NTNU.IDATT1002.App</mainClass>
                     <executable>${java.home}\bin\java</executable>
+                    <options>
+                        <options>--add-exports</options>
+                        <options>javafx.base/com.sun.javafx.event=org.controlsfx.controls</options>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -155,12 +202,28 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <config_properties>config.test.properties</config_properties>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <source>11</source>
+                    <reportOutputDirectory>public</reportOutputDirectory>
+                    <destDir>/</destDir>
+                </configuration>
             </plugin>
 
         </plugins>
